--- a/src/components/aboutMe/aboutMe.scss
+++ b/src/components/aboutMe/aboutMe.scss
@@ -98,7 +98,7 @@
           height: 160px;
           border-radius: 50%;
           background: {
-            image: url('../../assets/avatar.png');
+            image: url('../../assets/gustavo.jpg');
             repeat: no-repeat;
             size: cover;
             position: top;
