--- a/src/components/aboutMe/aboutMe.scss
+++ b/src/components/aboutMe/aboutMe.scss
@@ -201,7 +201,7 @@
         width: calc(275px / 9);
         height: calc(183px / 9);
         background: {
-          image: url('../../assets/co_flag.png');
+          image: url('../../assets/bandera.png');
           repeat: no-repeat;
           size: cover;
           position: center;
