--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -56,7 +56,7 @@
       border-radius: 4px;
       margin-right: 1rem;
       background: {
-        image: url('../../assets/icon.png');
+        image: url('../../assets/tavcode.jpg');
         repeat: no-repeat;
         size: cover;
         position: center;
