--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,8 +1,8 @@
 $backgroundLight: white;
 $backgroundDark: #152028;
 
-$primaryLight: #009688;;
-$primaryDark: #4db6ac;;
+$primaryLight: #0f58e0;;
+$primaryDark: #0f58e0;;
 
 $colorLight: rgba(black, .8);
 $colorDark: rgba(white, .8);
