--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,8 +1,8 @@
 $backgroundLight: white;
 $backgroundDark: #152028;
 
-$primaryLight: #0CB7F2;;
-$primaryDark: #0CB7F2;;
+$primaryLight: #2c5de6;;
+$primaryDark: #2c5de6;;
 
 $colorLight: rgba(black, .8);
 $colorDark: rgba(white, .8);
