--- a/src/components/aboutMe/aboutMe.scss
+++ b/src/components/aboutMe/aboutMe.scss
@@ -1,5 +1,7 @@
 @import '../../variables.scss';
 
+
+
 .aboutMe {
   height: 100vh;
   padding-left: 0;
@@ -8,6 +10,19 @@
   flex-flow: row wrap;
   align-items: center;
   justify-content: flex-start;
+
+  .Btn-currim{
+    background-color:rgb(26, 26, 104);
+    border-radius: 20px;
+    width: 50%;
+    height: 50px;
+  }
+
+  h3{
+    color: rgb(255, 255, 255);
+    justify-content: center;
+    text-align: center;
+  }
 
   @media (max-width: 767.98px) {
     height: auto;
