--- a/src/components/aboutMe/aboutMe.scss
+++ b/src/components/aboutMe/aboutMe.scss
@@ -12,7 +12,7 @@
   justify-content: flex-start;
 
   .Btn-currim{
-    background-color:rgb(26, 26, 104);
+    background-color:#2c5de6;
     border-radius: 15px;
     width: 180px;
     height: 50px;
