update potfolio and new proyects

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,7 +1,7 @@
 $backgroundLight: white;
 $backgroundDark: #152028;
 
-$primaryLight: #2c5de6;;
+$primaryLight: #143899;;
 $primaryDark: #2c5de6;;
 
 $colorLight: rgba(black, .8);
